--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .container{
     width: 100%;
     height:100%;
-    background: #42455a;
+    background: #ffb8c8;
 }
 .menu ul{
     display: inline-flex;
@@ -15,5 +15,45 @@
 .menu ul li{
     list-style: none;
     margin: 0 20px;
-    color: #b2b1b1;
+    color: #ff6c8d;
+    cursor: pointer;
+}
+.logo img{
+    width:70px;
+    margin-top: -7px;
+    margin-right: 48px;
+}
+.banner{
+  width: : 80%;
+  height: 70%;
+  top: 25%;
+  left: 130px;
+  position: absolute;
+  color: #fff;
+}
+.app-text{
+  width: 50%;
+  float: left;
+}
+.app-text h1{
+  font-size: : 43px;
+  width: 640px;
+  position: relative;
+  margin-left: 40px;
+}
+.app-text p{
+  font-size: : 15px;
+  width: 650px;
+  line-height: 25px;
+  margin: 30px 0 30px 40px;
+  color: #919191;
+}
+.app-picture{
+  width: 50%;
+  float: right;
+}
+.app-picture img{
+  width: 100%;
+  margin-top: -20px;
+  padding-left: 50px;
 }
