--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: 'Rokkitt', serif;
 }
 .container{
     width: 100%;
@@ -26,23 +26,24 @@
 .banner{
   width: : 80%;
   height: 70%;
-  top: 25%;
-  left: 130px;
+  left: 100px;
   position: absolute;
-  color: #fff;
+  color: black;
 }
 .app-text{
-  width: 50%;
+  width: 20%;
   float: left;
 }
 .app-text h1{
   font-size: : 43px;
   width: 640px;
   position: relative;
+  font-family: 'Rokkitt', serif;
   margin-left: 40px;
 }
 .app-text p{
   font-size: : 15px;
+  font-family: 'Rokkitt', serif;
   width: 650px;
   line-height: 25px;
   margin: 30px 0 30px 40px;
@@ -53,7 +54,5 @@
   float: right;
 }
 .app-picture img{
-  width: 100%;
-  margin-top: -20px;
-  padding-left: 50px;
+  width: 60%;
 }
