--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .container{
     width: 100%;
     height:100%;
-    background: #ffb8c8;
+    background: #C59B76;
 }
 .menu ul{
     display: inline-flex;
