--- a/style.css
+++ b/style.css
@@ -16,11 +16,28 @@ html, body{
   float: right;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 0;
+  margin: 0;
+  border: none;
   text-decoration: none;
   font-size: 17px;
 }
 
+.navbar-nav > li{
+  margin-left:30px;
+  margin-right:30px;
+}
+
+.navbar-nav > li{
+  padding-left:30px;
+  padding-right:30px;
+}
+@media (min-width: 992px){
+  .navbar li {
+      margin-left : 1em;
+      margin-right : 1em;
+  }
+}
 .col-sm-2:hover img{ 
   transform: scale(1.1); 
 }
