--- a/new.css
+++ b/new.css
@@ -7,12 +7,14 @@
   .agency {
     font-size: 20px;
   }
-  img .self {
-    margin-left: auto;
-    margin-right: auto;
+  p {
+    font-size: 20px;
   }
-  a{
-    font-size: 12px;
+  a {
+    font-size: 10px;
+  }
+  h4 {
+    font-size: 15px;
   }
 }
 
@@ -20,9 +22,36 @@
   .agency {
     font-size: 60px;
   }
-  a{
+  p {
+    font-size: 30px;
+  }
+  a {
     font-size: 20px;
   }
+  .col-6 {
+    width: auto;
+  }
+}
+
+.topnav2 {
+  overflow: hidden;
+  position: sticky;
+  width: 100%;
+  background-color: #121212;
+  z-index: 1;
+  left: 0px;
+  top: 0px;
+}
+
+.topnav2 a {
+  float: right;
+  line-height: 28px;
+  color: whitesmoke;
+  text-align: center;
+  padding: 24px 20px;
+  text-decoration: none;
+  font-size: 25px;
+  display: flex;
 }
 
 .topnav {
@@ -189,7 +218,7 @@ h2 {
 }
 
 a {
-  color: rgb(0, 0, 0);
+  color: whitesmoke;
   text-align: center;
 }
 
@@ -197,24 +226,56 @@ a {
   box-sizing: border-box;
 }
 
-/* The overlay effect - lays on top of the container and over the image */
-.salirsocials {
-  position: relative;
-  bottom: 0;
-  background: rgb(0, 0, 0);
-  background: rgba(0, 0, 0, 0.5); /* Black see-through */
-  color: #f1f1f1;
-  width: 100%;
-  transition: 0.5s ease;
-  opacity: 0;
-  color: white;
-  font-size: 20px;
-  padding: 20px;
-  text-align: center;
-  z-index: 2;
+/* The dropdown container */
+.dropdown {
+  float: left;
+  overflow: hidden;
 }
 
-/* When you mouse over the container, fade in the overlay title */
-.salir:hover .salirsocials {
-  opacity: 1;
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+}
+
+/* Add a red background color to navbar links on hover */
+.topnav a:hover,
+.dropdown:hover .dropbtn {
+  background-color: red;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
 }
