--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html, body{
   overflow: hidden;
 }
 
+
 /* Style the links inside the navigation bar */
 .topnav a {
   float: right;
@@ -23,6 +24,9 @@ html, body{
   font-size: 17px;
 }
 
+.heyo{
+  font-size:xx-large;
+}
 .navbar-nav > li{
   margin-left:30px;
   margin-right:30px;
