small device intro
Mobile text needed an adjustment, text too large

--- a/css/stylez.css
+++ b/css/stylez.css
@@ -12,6 +12,16 @@
   }
  }
 
+
+ @media (min-width: 400px) {
+  .introductionText{
+    font-size: 120%;
+  }
+  .introductionHead{
+    font-size: 200%;
+  }
+ }
+
  @media (min-width: 700px) {
   .introductionText{
     font-size: 200%;
