--- a/src/styles.css
+++ b/src/styles.css
@@ -32,6 +32,42 @@ body {
   width: 30%;
 }
 
+
+@media (max-width: 300px) {
+  .all-elephant-cards article img {
+    width: 800px;
+    height: 650px;
+    margin-top: 20px;
+    background-color: rgb(0, 0, 0);
+  }
+
+  h1{
+    font-size: xx-large;
+  }
+}
+
+@media (max-width: 400px) {
+  .all-elephant-cards article img {
+    width: 600px;
+    height: 450px;
+    margin-top: 20px;
+    background-color: rgb(0, 0, 0);
+  }
+
+  h1{
+    font-size: xx-large;
+  }
+}
+
+@media (min-width: 400px) {
+  .all-elephant-cards article img {
+    width: 300px;
+    height: 200px;
+    margin-top: 20px;
+    background-color: rgb(0, 0, 0);
+  }
+  }
+
 .card-text h3 {
   font-size: 16px;
 }
@@ -42,12 +78,6 @@ body {
   flex-wrap: wrap;
 }
 
-.all-elephant-cards article img {
-  width: 300px;
-  height: 200px;
-  margin-top: 20px;
-  background-color: rgb(0, 0, 0);
-}
 
 .all-elephant-cards {
   display: flex;
