--- a/src/styles.css
+++ b/src/styles.css
@@ -33,7 +33,7 @@ body {
 }
 
 
-@media (max-width: 300px) {
+@media (max-width: 415px) {
   .all-elephant-cards article img {
     width: 800px;
     height: 650px;
@@ -41,25 +41,12 @@ body {
     background-color: rgb(0, 0, 0);
   }
 
-  h1{
-    font-size: xx-large;
+  .intro{
+    font-size:120%;
   }
 }
 
-@media (max-width: 400px) {
-  .all-elephant-cards article img {
-    width: 600px;
-    height: 450px;
-    margin-top: 20px;
-    background-color: rgb(0, 0, 0);
-  }
-
-  h1{
-    font-size: xx-large;
-  }
-}
-
-@media (min-width: 400px) {
+@media (min-width: 415px) {
   .all-elephant-cards article img {
     width: 300px;
     height: 200px;
