--- a/css/stylez.css
+++ b/css/stylez.css
@@ -357,6 +357,16 @@ padding-top: 3%;
   text-size-adjust: large;
 }
 
+.comparing-web{
+  margin: auto; 
+  color: aliceblue;
+  padding-top: 2%;
+}
+
+.redesign-blurb{
+  
+}
+
   .infoTron{
     margin-top: 5%;
     padding-top:3%;
