Wrapping up before launch
Changes Trashy animals layout on medium+, added resume, added CF+ section

--- a/css/stylez.css
+++ b/css/stylez.css
@@ -343,7 +343,7 @@ padding-top: 3%;
 
   .dark
   {
-      background-color: rgb(32, 32, 32);;
+      background-color: rgb(32, 32, 32);
       color: aliceblue;
   }
 
