--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,7 @@ body {
 
 @media (max-width: 415px) {
   .all-elephant-cards article img {
-    width: 280px;
+    width: auto;
     height: 280px;
     background-color: rgb(0, 0, 0);
   }
@@ -34,7 +34,7 @@ body {
 
 @media (min-width: 415px) {
   .all-elephant-cards article img {
-    width: 300px;
+    width: auto;
     height: 300px;
     background-color: rgb(0, 0, 0);
   }
