--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,7 @@ body {
 }
 
 @media (max-width: 415px) {
-  .all-elephant-cards article img {
+  .all-friend-cards article img {
     width: auto;
     height: 280px;
     background-color: rgb(0, 0, 0);
@@ -33,7 +33,7 @@ body {
 }
 
 @media (min-width: 415px) {
-  .all-elephant-cards article img {
+  .all-friend-cards article img {
     width: auto;
     height: 300px;
     background-color: rgb(0, 0, 0);
@@ -51,7 +51,7 @@ body {
 }
 
 
-.all-elephant-cards {
+.all-friend-cards {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
